# Funlang

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  docs.org  test.txt
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
include/: utils.h
include/front-end/: lexer.h  parser.h
include/utils/: arena.h
src/: Makefile  Makefile.am  Makefile.in  funlang  main.c  utils.c  utils.h
src/.deps/: main.Po  utils.Po
src/front-end/: lexer.c  parser.c
src/front-end/.deps/: lexer.Po  lexer.Tpo
src/utils/: arena.c
