# Top-level Makefile.am

# Subdirectories to process
# Do I need to add include?
SUBDIRS = src

# Files to include in the distribution tarball
EXTRA_DIST = configure.ac Makefile.am

# Install targets (this step is optional if you're installing headers, etc.)
install-data-local:
	@echo "Installing project files..."
