# src/Makefile.am

# The binary/executable program to build
bin_PROGRAMS = funlang

# The source files for the program
funlang_SOURCES = main.c utils.c

# Include flags, telling the compiler to look in the include directory
AM_CPPFLAGS = -I$(top_srcdir)/include

# Compiler flags
AM_CFLAGS = -Wall -Werror

# Linker flags
# funlang_LDADD =
